--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Import font Poppins */
+/* Import font Google Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 /* Base styles */
