--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -97,3 +97,12 @@ body {
   background-color: #3b74ce;
   transform: translateY(-1px);
 }
+
+.navigation-bar .avatar {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  vertical-align: middle;
+  margin-right: 6px;
+}
+
